--- a/MDK-ARM/TEST_V1.uvprojx
+++ b/MDK-ARM/TEST_V1.uvprojx
@@ -462,6 +462,11 @@
               <FileType>1</FileType>
               <FilePath>..\DEV\spi_SD\spi_sd.c</FilePath>
             </File>
+            <File>
+              <FileName>sdio_sd.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\DEV\sdio_SD\sdio_sd.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
@@ -1078,7 +1083,7 @@
             <uThumb>0</uThumb>
             <uSurpInc>0</uSurpInc>
             <uC99>1</uC99>
-            <uGnu>0</uGnu>
+            <uGnu>1</uGnu>
             <useXO>0</useXO>
             <v6Lang>1</v6Lang>
             <v6LangP>1</v6LangP>
@@ -1091,7 +1096,7 @@
               <MiscControls></MiscControls>
               <Define>STM32F407xx,VECT_TAB_SRAM,USE_FULL_LL_DRIVER</Define>
               <Undefine></Undefine>
-              <IncludePath>../Inc;../Drivers/STM32F4xx_HAL_Driver/Inc;../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy;../Middlewares/Third_Party/FreeRTOS/Source/include;../Middlewares/Third_Party/FreeRTOS/Source/CMSIS_RTOS;../Middlewares/Third_Party/FreeRTOS/Source/portable/RVDS/ARM_CM4F;../Drivers/CMSIS/Device/ST/STM32F4xx/Include;../Drivers/CMSIS/Include;..\Lib\RTT;..\User;..\User\task_manage;..\User\cpu_usage;..\User\common;..\User\low_power;..\CPU\SPI;..\DEV\LED;..\DEV\spi_flash;..\CPU\UART;..\Lib\my_print;..\Lib\FATFS;..\Lib\vfs;..\Lib\list;..\Drivers\STM32F4xx_LL_Driver\inc;..\CPU\SYS;..\DEV\spi_SD;..\User\bsp_init;..\User\task_manage;..\CPU\SDIO</IncludePath>
+              <IncludePath>../Inc;../Drivers/STM32F4xx_HAL_Driver/Inc;../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy;../Middlewares/Third_Party/FreeRTOS/Source/include;../Middlewares/Third_Party/FreeRTOS/Source/CMSIS_RTOS;../Middlewares/Third_Party/FreeRTOS/Source/portable/RVDS/ARM_CM4F;../Drivers/CMSIS/Device/ST/STM32F4xx/Include;../Drivers/CMSIS/Include;..\Lib\RTT;..\User;..\User\task_manage;..\User\cpu_usage;..\User\common;..\User\low_power;..\CPU\SPI;..\DEV\LED;..\DEV\spi_flash;..\CPU\UART;..\Lib\my_print;..\Lib\FATFS;..\Lib\vfs;..\Lib\list;..\Drivers\STM32F4xx_LL_Driver\inc;..\CPU\SYS;..\DEV\spi_SD;..\User\bsp_init;..\User\task_manage;..\CPU\SDIO;..\DEV\sdio_SD</IncludePath>
             </VariousControls>
           </Cads>
           <Aads>
@@ -1214,6 +1219,11 @@
               <FileName>spi_sd.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\DEV\spi_SD\spi_sd.c</FilePath>
+            </File>
+            <File>
+              <FileName>sdio_sd.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\DEV\sdio_SD\sdio_sd.c</FilePath>
             </File>
           </Files>
         </Group>
